styles in the head tag

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,16 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900&display=swap"
     />
+    <style>
+      *,
+      *::after,
+      *::before {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
