--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,16 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+      }
+      body {
         font-family: "Roboto", sans-serif;
+        margin: 0 auto;
+        max-width: 1300px;
+      }
+      @media screen and (max-width: 1280px) {
+        body {
+          max-width: 1100px;
+        }
       }
     </style>
   </head>
