--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,11 @@
           max-width: 1100px;
         }
       }
+      @media screen and (max-width: 1003px) {
+        body {
+          max-width: 850px;
+        }
+      }
     </style>
   </head>
   <body>
